--- a/src/view/taskbar/taskbar.css
+++ b/src/view/taskbar/taskbar.css
@@ -22,6 +22,7 @@ div > img {
 	cursor: pointer;	
 	transition: 0.1s transform;
 	-webkit-app-region: no-drag;
+	/* -webkit-box-reflect: below 5px linear-gradient(transparent, transparent, rgba(0,0,0,0.7)); */
 }
 
 div > img:hover {
